# frame0

./: .gitignore  Cargo.toml  FRAME0_IMPLEMENTATION_STATUS.md  README.md
.github/workflows/: ci.yml
addons/: README.md  registry.yaml
addons/org.example.frame0.c_external_gain/: README.md  addon.yaml
addons/org.example.frame0.visual_warp/: README.md  addon.yaml
apps/frame0_cli/: Cargo.toml
apps/frame0_cli/src/: main.rs
apps/frame0_cli/tests/: cli.rs
apps/frame0_plugin_host/: Cargo.toml
apps/frame0_plugin_host/src/: lib.rs  main.rs
apps/frame0_plugin_host/tests/: host.rs
crates/frame0_ai_tools/: Cargo.toml
crates/frame0_ai_tools/src/: lib.rs
crates/frame0_core/: Cargo.toml
crates/frame0_core/src/: lib.rs
crates/frame0_creative/: Cargo.toml
crates/frame0_device/: Cargo.toml
crates/frame0_graph/: Cargo.toml
crates/frame0_plugin_api/: Cargo.toml
crates/frame0_render/: Cargo.toml
crates/frame0_schema/: Cargo.toml
crates/frame0_time/: Cargo.toml
docs/: cli-reference.md
docs/addons/: authoring-guide.md  registry.md  verification.md
docs/adr/: 0001-core-language-rust.md  0002-plugin-boundary-c-abi.md  0003-plugin-isolation.md  0004-timebase-independent-of-render-loop.md  0005-gui-out-of-v0-1.md
docs/ai/: operation-guide.md
docs/api/: README.md  compatibility.md  reference.md  schemas.md
docs/apple/: native-feature-samples.md
docs/audio/: audio-pipeline.md  audio-visual-sync.md
docs/creative/: CONCEPT_MAP.md  FEATURE_CHECKLIST.md  NATIVE_SAMPLE_TODO.md
docs/extensions/: plugin-extension-examples.md
docs/handoff/: CLAUDE_CODE_HANDOFF.md
docs/manual/: user-manual.md
docs/ml/: native-ml-adapter.md
docs/native/: c-abi-reference.md  cpp-integration.md  external-c-abi.md
docs/rendering/: shader-post-processing.md
docs/roadmap/: DEVELOPMENT_TODO.md
examples/analog_filter/: README.md  scene.yaml
examples/apple_native_features/: README.md  scene.yaml
examples/audio_pipeline/: README.md  scene.yaml
examples/audio_reactive/: scene.yaml
examples/audio_visual_sync/: README.md  scene.yaml
examples/auv3_audio_unit/: scene.yaml
examples/camera_extension_output/: scene.yaml
examples/camera_to_shader/: scene.yaml
examples/cinder_geometry/: README.md  scene.yaml
examples/coreml_style_transfer/: README.md  scene.yaml
examples/cpp_external_bridge/: README.md  scene.yaml
examples/creative_primitives/: README.md  scene.yaml
examples/dataset_recorder/: README.md  scene.yaml
examples/depth_pointcloud/: README.md  scene.yaml
examples/extension_multi_output/: scene.yaml
examples/generative_typography/: README.md  scene.yaml
frame0_ai_bundle/: FRAME0_AI_SPECIFICATION.md  FRAME0_DEVELOPMENT_PLAN.md  FRAME0_TODO_CHECKLIST.md  README.md  bundle_manifest.json
schemas/: addon.schema.json  audio_packet.schema.json  automation.schema.json  capability.schema.json  device.schema.json  error.schema.json  event_packet.schema.json  extension.schema.json  frame_packet.schema.json  graph.schema.json  inference_packet.schema.json  input_event.schema.json  media_asset.schema.json  ml_model.schema.json  operator_network.schema.json  parameter.schema.json  permission.schema.json  plugin.schema.json  resource.schema.json  runtime_snapshot.schema.json  scene.schema.json  timeline.schema.json  visual_node.schema.json
scripts/: creative_feature_loop.sh  launch_examples.sh  verify_addon_package.sh  verify_addon_registry.sh  verify_examples.sh
templates/external-cpp/: CMakeLists.txt  README.md
templates/external-cpp/examples/: cpp_external_scene.yaml
templates/external-cpp/include/: frame0_cpp_external_adapter.hpp
templates/external-cpp/src/: frame0_cpp_external_adapter.cpp
(+61 files in other folders)
