[package]
name = "frame0_plugin_host"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "frame0-plugin-host"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
frame0_plugin_api = { path = "../../crates/frame0_plugin_api" }
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

