[package]
name = "frame0_ai_tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
frame0_graph = { path = "../frame0_graph" }
frame0_schema = { path = "../frame0_schema" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

